--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,3 @@
 PROJET3/PROJET3/ProjetAzure/functions/local.settings.json 
 PROJET3/PROJET3/ProjetAzure/functions/local.settings.json 
+PROJET3/PROJET3/ProjetAzure/functions/local.settings.json 
