--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
 PROJET3/PROJET3/ProjetAzure/functions/local.settings.json 
 PROJET3/PROJET3/ProjetAzure/functions/local.settings.json 
 PROJET3/PROJET3/ProjetAzure/functions/local.settings.json 
+PROJET3/PROJET3/ProjetAzure/functions/local.settings.json 
