Ignorer les fichiers secrets

--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,4 @@ PROJET3/PROJET3/ProjetAzure/functions/local.settings.json
 PROJET3/PROJET3/ProjetAzure/functions/local.settings.json 
 PROJET3/PROJET3/ProjetAzure/functions/local.settings.json 
 PROJET3/PROJET3/ProjetAzure/functions/local.settings.json 
+PROJET3/PROJET3/ProjetAzure/functions/local.settings.json 
