Ajouter .gitignore pour ignorer les secrets

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,4 @@ PROJET3/PROJET3/ProjetAzure/functions/local.settings.json
 PROJET3/PROJET3/ProjetAzure/functions/local.settings.json 
 PROJET3/PROJET3/ProjetAzure/functions/local.settings.json 
 PROJET3/PROJET3/ProjetAzure/functions/local.settings.json 
+PROJET3/PROJET3/ProjetAzure/functions/local.settings.json 
