--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,4 @@ PROJET3/PROJET3/ProjetAzure/functions/local.settings.json
 PROJET3/PROJET3/ProjetAzure/functions/local.settings.json 
 PROJET3/PROJET3/ProjetAzure/functions/local.settings.json 
 PROJET3/PROJET3/ProjetAzure/functions/local.settings.json 
+PROJET2/PROJET2/Infra2 
